--- a/styles.css
+++ b/styles.css
@@ -371,8 +371,8 @@ input:checked + .toggle-slider:before {
     /* Info panel adjustments */
     #info-panel {
         position: relative;
+        width: 100%;
         height: 60%;
-        min-height: 40vh;
         left: auto;
         top: auto;
         padding-top: 100px;
