--- a/scrolling-images.css
+++ b/scrolling-images.css
@@ -155,10 +155,15 @@
     #text-panel {
         position: relative;
         width: 100%;
-        padding-top: 60px;
-        height: auto;
-        border-right: none;
-        border-top: 1px solid #ddd;
+        padding-top: 100px;
+    }
+    
+    #image-container {
+        visibility: hidden;
+    }
+    
+    .image img {
+        visibility: hidden;
     }
     
     .text-section {
