--- a/styles.css
+++ b/styles.css
@@ -363,6 +363,7 @@ input:checked + .toggle-slider:before {
     #map-container {
         position: relative;
         width: 100%;
+        height: 40%;
         right: auto;
     }
     
