--- a/scrolling-images.css
+++ b/scrolling-images.css
@@ -174,6 +174,7 @@
     #text-content h2 {
         font-size: 20px;
         text-align: left;
+        line-height: 1.65rem;
     }
     
     #text-content h3 {
