--- a/scrolling-images.css
+++ b/scrolling-images.css
@@ -1,10 +1,23 @@
 /* Specific styles for the scrolling images page */
 
 /* Layout */
+
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
+}
+
+.container {
+    overflow-x: hidden;
+}
+
+
 #text-panel {
     width: 50%;
     background-color: #f8f9fa;
     overflow-y: auto;
+    overflow-x: hidden;
     border-right: 1px solid #303030;
     padding: 20px;
     position: absolute;
@@ -184,7 +197,7 @@
 @media (max-width: 768px) {
     main {
         flex-direction: column-reverse;
-        overflow-x: hidden;
+        overflow-x: hid;
     }
     
     #text-panel {
