--- a/scrolling-images.css
+++ b/scrolling-images.css
@@ -51,6 +51,7 @@ html, body {
 #text-content h2 {
     color: #303030;
     font-size: 24px;
+        line-height: 1.2;
     padding-bottom: 10px;
 }
 
@@ -117,14 +118,18 @@ html, body {
     bottom: 50px;
     left: 50%;
     transform: translateX(-50%);
-    padding: 5px 10px;
+    padding: 8px 10px;
     background-color: white;
     font-size: 14px;
     z-index: 1000;
     color: #303030;
     text-align: center;
     max-width: 100%;
-    font-family: 'Catalogue', sans-serif;
+    font-family: 'FuturaMono';
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 1.1;
 }
 
 /* Navigation */
@@ -222,6 +227,7 @@ html, body {
     #text-content h2 {
         font-size: 20px;
         text-align: left;
+            line-height: 1.2;
         line-height: 1.65rem;
     }
     
