--- a/overlay.css
+++ b/overlay.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #b7ad0046;
+    background-color: rgba(255, 255, 255, 0.211);
     backdrop-filter: blur(5px);
     z-index: 2000;
     padding-top: 30px;
@@ -23,12 +23,12 @@
 }
 
 .overlay-content {
-    background-color: #fff652;
+    background-color: white;
     border: 1px solid #303030;
+    border-radius: 20px;
     width: 90%;
     max-width: 70%;
     max-height: 70vh;
-    border-radius: 10px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -36,7 +36,7 @@
 
 .overlay-header {
     padding: 30px 30px 20px 30px;
-    background-color: #fff652;
+    background-color: white;
     border-bottom: 2px dotted #303030;
     display: flex;
     justify-content: space-between;
@@ -67,16 +67,16 @@
 }
 
 .overlay-body p {
-    font-family: 'FuturaMono';
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 1;
+    font-family: 'MonoTypewrite';
+    font-weight: regular;
+    font-size: 14px;
+    line-height: 1.6;
     margin-bottom: 15px;
     color: #303030;
 }
 
 .overlay-body ul {
-    font-family: 'FuturaMono';
+    font-family: 'MonoTypewrite';
     margin-bottom: 15px;
     margin-left: 20px;
     font-size: 24px;
@@ -84,7 +84,7 @@
 }
 
 .overlay-body li {
-    font-family: 'FuturaMono';
+    font-family: 'MonoTypewrite';
     line-height: 1.6;
     margin-bottom: 8px;
     color: #303030;
@@ -103,37 +103,11 @@
 /* Mobile adjustments */
 @media (max-width: 768px) {
 
-    #about-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff20046;
-    backdrop-filter: blur(5px);
-    z-index: 2000;
-    display: flex;
-    justify-content: center;
-    align-items: top;
-        padding-top: 30px;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-}
-
     .overlay-content {
         width: 90%;
-        max-height: 70vh;
+        max-height: 75vh;
         max-width: 80%;
     }
-
-    .overlay-body p {
-    font-family: 'FuturaMono';
-    font-size: 20px;
-    line-height: 1;
-    margin-bottom: 15px;
-    color: #303030;
-}
     .overlay-header {
         padding: 20px 20px 20px 20px;
     }
