--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,20 @@
     box-sizing: border-box;
 }
 
+/* Add to your styles.css file */
+.color-filter-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #d0ffdecd; /* Change to your desired color */
+  mix-blend-mode: multiply;
+  pointer-events: none; /* So clicks pass through */
+  z-index: 9999; /* Make sure it's above everything */
+  opacity: 1; /* Adjust intensity here */
+}
+
 @font-face {
     font-family: 'Catalogue';
     src: url('fonts/Lineto_Catalogue_Regular.ttf') format('woff');
@@ -12,8 +26,8 @@
     font-style: normal;
 }
 @font-face {
-    font-family: 'FuturaMono';
-    src: url('fonts/Hershey-Noailles-Futura-Simplex-Light.otf') format('opentype');
+    font-family: 'MonoTypewrite';
+    src: url('fonts/MonospaceTypewriter.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
@@ -110,12 +124,12 @@ main {
 }
 
 #transcript-details {
-    font-family: 'FuturaMono';
-    font-weight: bold;
-    font-size: 18px;
+    font-family: 'MonoTypewrite';
+    font-weight: regular;
+    font-size: 14px;
     margin-left: 5%;
     margin-right: 5%;
-    line-height: 1.1;
+    line-height: 1.6;
     display: block;
     text-align: left;
 }
@@ -124,8 +138,8 @@ main {
 .person-info {
     font-family: 'Catalogue';
     font-weight: medium;
-    margin-bottom: .1rem;
-    padding-bottom: .5rem;
+    margin-bottom: 0rem;
+    padding-bottom: .2rem;
     border-bottom: 2px dotted #303030;
     border-right: 1px solid #303030;  /* Changed from left to right border */
     position: fixed;
@@ -146,11 +160,10 @@ main {
 }
 
 .person-address {
-    font-size: 20px;
-    font-weight: bold;
-    font-family: 'FuturaMono';
+    font-size: 14px;
+    font-family: 'MonoTypewrite';
     color: #303030;
-    margin-top: 10px;
+    margin-top: 4px;
     margin-bottom: 0.5rem;  /* Reduced from 2rem for less space */
 }
 
@@ -174,7 +187,7 @@ main {
     width: 20%;
     vertical-align: top;
     padding: 8px 10px 8px 0;
-    font-weight: bold;
+    font-weight: regular;
     color: #303030;
 }
 
@@ -472,6 +485,7 @@ input:checked + .toggle-slider:before {
         max-width: 100%;
         max-height: 100%;
         object-fit: contain;
+        filter: grayscale(100%);
     }
     
     .image-caption {
