--- a/scrolling-images.css
+++ b/scrolling-images.css
@@ -188,8 +188,9 @@ html, body {
 
 .mobile-image-caption {
     font-size: 14px;
+    line-height: 1.6;
     color: #303030;
-    font-family: 'Catalogue', sans-serif;
+    font-family: 'MonoTypewrite';
     text-align: center;
     padding: 12px 5px;
     max-width: 73%;
